--- a/second.html
+++ b/second.html
@@ -7,10 +7,6 @@
         div{
             font-size: 35px;
             text-align: center;
-            
-        @a{
-            color: blue;
-        }
         }
     </style>
 </head>
@@ -20,7 +16,7 @@
             <li>an unorder intem</li>
             <li>an unorder intem</li>
             <li>an unorder intem</li>
-            <ol #class="a">
+            <ol style ="color: blue;">
                 <li>an order item</li>
                 <li>an other unorder item</li>
             </ol>
@@ -30,8 +26,9 @@
             <li>an unorder intem</li>
         </ul>
     </div>
-    <ol>
+    <ol style="color:red;">
         <li>an item</li>
         <li>other item</li>
     </ol>
 </body>
+</html>
