--- a/second.html
+++ b/second.html
@@ -7,6 +7,12 @@
         div{
             font-size: 35px;
         }
+        ul{
+            color: red;
+        }
+        ol{
+            color: blue;
+        }
     </style>
 </head>
 <body>
