add style to ul and ol

--- a/second.html
+++ b/second.html
@@ -4,6 +4,9 @@
         second
     </title>
     <style>
+        ol{
+            color: blue;
+        }
         div{
             font-size: 35px;
         }
