--- a/second.html
+++ b/second.html
@@ -18,7 +18,7 @@
         }
     </style>
 </head>
-<body style="font-size: 55">
+<body style="font-size: 55;">
     <div>
         <ul>
             <li>an unorder intem</li>
