--- a/second.html
+++ b/second.html
@@ -18,7 +18,7 @@
         }
     </style>
 </head>
-<body style="font-size: 55;">
+<body >
     <div>
         <ul>
             <li>an unorder intem</li>
@@ -34,7 +34,7 @@
             <li>an unorder intem</li>
         </ul>
     </div>
-    <ol>
+    <ol style="font-size: 55;">
         <li>an item</li>
         <li>other item</li>
     </ol>
