add font-size in body

--- a/second.html
+++ b/second.html
@@ -34,7 +34,7 @@
             <li>an unorder intem</li>
         </ul>
     </div>
-    <ol style="font-size: 55;">
+    <ol style="font-size: 55px;">
         <li>an item</li>
         <li>other item</li>
     </ol>
